@@ -5,39 +5,25 @@ import java.util.*;
 public class CollectionExample {
     public static void main(String[] args) {
         String[] strings = {"hello", "java", "2", "0", "2", "2"};
-        List<String> test = new ArrayList<>();
-        System.out.println(arrayToList(strings));
-        test.add("poxos");
-        test.add("petros");
-        test.add("hayk");
-        test.add("aram");
-        test.add("martiros");
-        test.add("anna");
-        test.add("karen");
-        test.add("arsen");
-        System.out.println(listToSet(test));
-        System.out.println(removeById(test,0));
-        List<Integer> linkedList = new LinkedList<>();
-        linkedList.add(10);
-        linkedList.add(11);
-        linkedList.add(15);
-        linkedList.add(1);
-        linkedList.add(1554);
-        System.out.println(listToLinkedList(linkedList));
+        List<String> stringList = arrayToList(strings);
 
+        System.out.println(listToSet(stringList));
+        System.out.println(removeById(stringList,0));
+        List<Integer> linkedList = new LinkedList<>(Arrays.asList(10,25,55,1,8));
+        System.out.println(listToLinkedList(linkedList));
         Collections.sort(linkedList);
         System.out.println(reverseNumbers(linkedList));
 //        mecic poqr ksortavore
         linkedList.sort(Collections.reverseOrder());
         System.out.println(reverseNumbers(linkedList));
 
-        printFirstFive(test);
-        System.out.println("size: "+sizeOfList(test));
+        printFirstFive(stringList);
+        System.out.println("size: "+sizeOfList(stringList));
     }
 
     //մեթոդը գրել այնպես, որ կանչենք, ու իրան ստրինգների մասիվ տանք, ինքը վերադարձնի նույն էլեմենտներով ArrayList
     static List<String> arrayToList(String[] values) {
-        return new ArrayList<>(List.of(values));
+        return  Arrays.asList(values);
     }
 
     //մեթոդը գրել այնպես, որ կանչենք ու տանք ինչ որ լիստ, ու ինդեքս, ինքը ջնջե էդ ինդեքսի տակ գտնվող էլեմենտը, ու վերադարձնե նույն լիստը, առանց էդ էլեմենտի։
